--- a/style.css
+++ b/style.css
@@ -1,4 +1,44 @@
 body {
     margin: 0;
     background: linear-gradient(to right,rgb(170,68,176), rgb(231,64,154));
+    height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+div {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin: auto;
+    justify-content: center;
+}
+
+form {
+    background-color: white;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 20px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h1 {
+    width: fit-content;
+    margin: 20px auto;
+    margin-bottom: 30px;
+}
+input {
+    width:80%;
+    position: relative;
+    margin: 10px 0;
+    padding: 10px;
+    border: thin solid rgb(170,68,176);
+    outline: none;
+}
+input:focus{
+    outline: thin solid rgb(170,68,176);
+}
+button {
+    display: block;
+    margin: auto;
 }
