--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div {
     justify-content: center;
 }
 
-form {
+form, main {
     background-color: white;
     width: 80%;
     max-width: 500px;
@@ -21,6 +21,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 10px;
 }
 h1 {
     width: fit-content;
@@ -29,24 +30,59 @@ h1 {
 }
 input {
     width:80%;
-    position: relative;
     margin: 10px 0;
     padding: 10px;
     border: thin solid rgb(170,68,176);
     outline: none;
+    background-color: white !important;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 input:focus{
+    background-color: white !important;
     outline: thin solid rgb(170,68,176);
 }
-button {
+.btn2 {
     display: block;
     margin: 20px auto;
-    width: 70%;
+    width: calc(80% + 20px);
     font-weight: 700;
     padding: 10px;
     background: linear-gradient(to right,rgb(170,68,176), rgb(231,64,154));
     color: #fff;
     font-size: 14px;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
+}
+btn2:hover {
+    box-shadow: 1px 1px 10px 1px rgb(170,68,176);
+}
+#password {
+    width: calc(80% - 35px) !important;
+    margin-left: -40px;
+    position: relative;
+    border-right: none;
+}
+.btn1 {
+    position: absolute;
+    top: 331px;
+    right: 131px;
+    height: 37px;
+    width: 37px;
+    background-color: white;
+    border: none;
+    border: thin solid rgb(170,68,176);
+    border-left: none;
+    outline: none;
+}
+#password:focus {
+    outline: none !important;
+}
+button i {
+    font-size: 15px;
+    color: rgb(170,68,176);
 }
