--- a/style.css
+++ b/style.css
@@ -102,3 +102,8 @@ a {
 a:hover {
     text-decoration: underline;
 }
+@media(max-width:500px) {
+    #password {
+        width: 69% !important;
+    }
+}
