--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ form, main {
 h1 {
     width: fit-content;
     margin: 20px auto;
+    text-align: center;
     margin-bottom: 30px;
 }
 input {
@@ -64,11 +65,15 @@ input:focus{
 #password {
     position: relative;
     border-right: none;
+    width: calc(80% - 37px);
 }
 .cont {
     display: flex;
     align-items: center;
-    width: calc(80% + 53px) !important;
+    width: 100% !important;
+    width: fit-content;
+    margin: 10px 0;
+
 }
 .btn1 {
     height: 37px;
@@ -90,7 +95,6 @@ button i {
     color: rgb(170,68,176);
 }
 p {
-    /* margin-top: -100px; */
     text-align: center;
     color: black;
     font-weight: 700;
@@ -104,6 +108,6 @@ a:hover {
 }
 @media(max-width:500px) {
     #password {
-        width: 69% !important;
+        width: calc(80% - 37px);
     }
 }
