--- a/adminPage.css
+++ b/adminPage.css
@@ -1,5 +1,6 @@
 body {
     position: relative;
+    width: 100%;
     height: 100%;
     margin: 0;
 }
@@ -10,7 +11,7 @@ h3 {
     margin-bottom: 10px;
 }
 h1 {
-    margin-bottom: 10px;
+    margin-bottom: 11px;
     margin-right: auto;
 }
 .edit, .delete {
@@ -25,8 +26,8 @@ h1 {
     background-color: red;
 }
 .edit-layer {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     position: absolute;
     top: 0;
@@ -42,7 +43,6 @@ h1 {
     padding: 20px;
     gap: 20px;
     background-color: whitesmoke;
-    /* display: flex; */
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -52,4 +52,10 @@ h1 {
     display: flex;
     align-items: baseline;
     padding: 0 10px 0 0;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
